--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"build": "webpack --progress --colors --mode production",
-		"work": "webpack --progress --colors --watch  --mode development",
+		"work": "webpack --progress --colors --watch  --mode development"
 	},
 	"author": "Gergely Laborci",
 	"license": "ISC",
