--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 		"gulp-autoprefixer": "^3.1.0",
 		"gulp-browserify": "^0.5.1",
 		"gulp-concat": "^2.6.1",
-		"gulp-google-webfonts": "^2.0.0",
+		"gulp-google-webfonts": "~1.1.0",
 		"gulp-less": "^3.0.5",
 		"gulp-sourcemaps": "^1.9.1",
 		"gulp-uglifycss": "^1.1.0",
